--- a/src/main/webapp/vistas/ratificaciones/List.xhtml
+++ b/src/main/webapp/vistas/ratificaciones/List.xhtml
@@ -17,8 +17,8 @@
             <h:form id="RatificacionesListForm">
                 <p:panel header="#{bundle.ListRatificacionesTitle}">
                     <p:contextMenu for="datalist">
-                        <p:menuitem id="editButton"    value="#{bundle.Edit}"      icon="ui-icon-pencil"   update=":RatificacionesEditForm"      oncomplete="PF('RatificacionesEditDialog').show()"/>
-                        <p:menuitem id="viewButton"     value="#{bundle.View}"      icon="ui-icon-search"   update=":RatificacionesViewForm"      oncomplete="PF('RatificacionesViewDialog').show()"/>                                               
+                        <p:menuitem id="editButton"    value="#{bundle.Edit}"      icon="ui-icon-pencil"   update=":RatificacionesEditForm"      oncomplete="PF('RatificacionesEditDialog').show()" disabled="#{ratificacionesController.selected.status == false}"/>
+                        <p:menuitem id="viewButton"    value="#{bundle.View}"      icon="ui-icon-search"   update=":RatificacionesViewForm"      oncomplete="PF('RatificacionesViewDialog').show()"/>                                               
                     </p:contextMenu>
                     <p:dataTable id="datalist" value="#{ratificacionesController.items}" var="item"
                                  selectionMode="single" selection="#{ratificacionesController.selected}"
@@ -28,6 +28,7 @@
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  emptyMessage="#{bundle.ListRatificacionesEmpty}"
                                  >
+                    <p:ajax event="rowSelect" update=":RatificacionesListForm"/>    
                     <f:facet name="header">                       
                         <p:commandButton id="createButton"   value="#{bundle.Create}"    icon="ui-icon-plus"     update=":RatificacionesCreateForm"    oncomplete="PF('RatificacionesCreateDialog').show()" actionListener="#{ratificacionesController.prepareCreate}" />
                     </f:facet>   
