--- a/src/main/webapp/vistas/Reportes/list.xhtml
+++ b/src/main/webapp/vistas/Reportes/list.xhtml
@@ -5,12 +5,14 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
     <h:body>
-        <ui:composition template="/templates/templateBase.xhtml">
-            <ui:define name="body">
+        <ui:composition template="/templates/templateBase_1.xhtml">
+            <ui:define name="title">
+                <h:outputText value="#{bundle.ListDependenciasTitle}"></h:outputText>
+            </ui:define>
+            <ui:define name="body">            
+                <p:layout>
+                    <p:layoutUnit position="north">
                         <h:form>
                             <p:panelGrid columns="1" layout="grid">
                                 <f:facet name="header">
@@ -26,6 +28,8 @@
                                 </p:selectOneRadio>
                             </p:panelGrid>
                         </h:form>
+                    </p:layoutUnit>
+                    <p:layoutUnit position="center">
                         <h:form id="reporteForm1"> 
                             <h:panelGroup id="panelReposrteDepe">
                                 <p:dataTable id="datalist" var="emIngE" value="#{reportesController.resultadoContoller}"
@@ -48,9 +52,10 @@
                                 </p:dataTable>
                             </h:panelGroup>
                         </h:form>
+                        </p:layoutUnit>
+                    </p:layout>
                 <ui:include src="calendarReportes.xhtml"/>
             </ui:define>
-
         </ui:composition>
     </h:body>
 </html>
