--- a/src/main/webapp/vistas/controlsolicitudes/List.xhtml
+++ b/src/main/webapp/vistas/controlsolicitudes/List.xhtml
@@ -26,7 +26,8 @@
                 <p:panel header="#{bundle.ListControlsolicitudesTitle}">
                        <p:contextMenu for="datalist">
                             <p:menuitem icon="ui-icon-search" value="#{bundle.View}" update=":CtlSolicitudesInternetViewForm" oncomplete="PF('CtlSolicitudesInternetViewDialog').show()"/>
-                            <p:menuitem icon="ui-icon-plus" value="#{bundle.iniciarNota}"/> 
+                            <p:menuitem icon="ui-icon-plus" value="#{bundle.iniciarNota}"  oncomplete="PF('NotasCreateDialog').show()" /> 
+                          
                         </p:contextMenu>
                     <p:dataTable id="datalist" value="#{controlsolicitudesController.items}" var="item"
                                  selectionMode="single" selection="#{controlsolicitudesController.selected}"
@@ -34,11 +35,11 @@
                                  rowKey="#{item.idcontrolsolicitud}"
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
-                                 editable="true"
+                                 editable="#{item.status== 1}"
                                  >
                         <p:ajax event="rowEdit" listener="#{controlsolicitudesController.update()}"/>
                         <p:ajax event="rowEditCancel" listener="#{controlsolicitudesController.cancelarEdit}"/>
-                        <p:ajax event="rowSelect" update="proyecto"/>
+                        <p:ajax event="rowSelect" update="proyecto" listener="#{notasController.crearNotaCS(controlsolicitudesController.selected)}"/>
                         <p:column filterBy="#{item.solicitud}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListControlsolicitudesTitle_solicitud}"/>
@@ -107,7 +108,7 @@
                                 <h:outputText value="#{item.proyecto.nombre}"/>
                             </f:facet>
                             <f:facet name="input">
-                                <p:selectOneMenu id="proyecto" filter="true" value="#{item.proyecto}">
+                                <p:selectOneMenu id="proyecto" filter="true" value="#{item.proyecto}" >
                                     <f:selectItems value="#{nomProyectosController.itemsAvailableSelectOne}"
                                                    var="proyectoItem"
                                                    itemValue="#{proyectoItem}"
@@ -117,12 +118,12 @@
                             </p:cellEditor>
                         </p:column>
                         <p:column>
-                            <p:commandLink value="Cancelar" action="#{controlsolicitudesController.cancelAndEditSolicitud()}" actionListener="#{controlsolicitudesController.setEvento(2)}">
-                                <p:confirm header="Confirmation" message="Esta segura(o) de cancelar la solicitud? #{controlsolicitudesController.selected.solicitud}" icon="ui-icon-alert"/>
+                            <p:commandLink value="Cancelar" action="#{controlsolicitudesController.cancelAndEditSolicitud()}" actionListener="#{controlsolicitudesController.setEvento(2)}" disabled="#{item.status != 4}">
+                                <p:confirm header="Confirmation" message="Esta segura(o) de cancelar la solicitud? #{item.solicitud}" icon="ui-icon-alert"/>
                             </p:commandLink>
                             <br/>
-                            <p:commandLink value="Terminar"  action="#{controlsolicitudesController.cancelAndEditSolicitud()}" actionListener="#{controlsolicitudesController.setEvento(1)}">
-                                <p:confirm header="" message="Esta segura(o) de terminar la solicitud? #{controlsolicitudesController.selected.solicitud}" icon="ui-icon-alert"/>
+                            <p:commandLink value="Terminar"  action="#{controlsolicitudesController.cancelAndEditSolicitud()}" actionListener="#{controlsolicitudesController.setEvento(1)}" disabled="#{item.status != 4}">
+                                <p:confirm header="" message="Esta segura(o) de terminar la solicitud? #{item.solicitud}" icon="ui-icon-alert"/>
                             </p:commandLink>
                         </p:column>
        <p:column style="width:32px">
@@ -136,9 +137,9 @@
         <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
     </p:confirmDialog>
             </h:form>
-            <ui:include src="Edit.xhtml"/>
             <ui:include src="View.xhtml"/>
             <ui:include src="ViewSolicitudes.xhtml"/>
+            <ui:include src="../notas/CreateCS.xhtml"/>
         </ui:define>
     </ui:composition>
 
