--- a/src/main/webapp/vistas/controlsolicitudes/List.xhtml
+++ b/src/main/webapp/vistas/controlsolicitudes/List.xhtml
@@ -26,7 +26,7 @@
                 <p:panel header="#{bundle.ListControlsolicitudesTitle}">
                        <p:contextMenu for="datalist">
                             <p:menuitem icon="ui-icon-search" value="#{bundle.View}" update=":CtlSolicitudesInternetViewForm" oncomplete="PF('CtlSolicitudesInternetViewDialog').show()"/>
-                            <p:menuitem icon="ui-icon-plus" value="#{bundle.iniciarNota}"  oncomplete="PF('NotasCreateDialog').show()" /> 
+                            <p:menuitem icon="ui-icon-plus" value="#{bundle.iniciarNota}" actionListener="#{notasController.crearNotaCS(controlsolicitudesController.selected)}" update=":NotasCreateForm" oncomplete="PF('NotasCreateDialog').show()" /> 
                           
                         </p:contextMenu>
                     <p:dataTable id="datalist" value="#{controlsolicitudesController.items}" var="item"
@@ -39,7 +39,7 @@
                                  >
                         <p:ajax event="rowEdit" listener="#{controlsolicitudesController.update()}"/>
                         <p:ajax event="rowEditCancel" listener="#{controlsolicitudesController.cancelarEdit}"/>
-                        <p:ajax event="rowSelect" update="proyecto" listener="#{notasController.crearNotaCS(controlsolicitudesController.selected)}"/>
+                        <p:ajax event="rowSelect" update="proyecto" />
                         <p:column filterBy="#{item.solicitud}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListControlsolicitudesTitle_solicitud}"/>
