--- a/src/main/webapp/vistas/controlsolicitudes/List.xhtml
+++ b/src/main/webapp/vistas/controlsolicitudes/List.xhtml
@@ -18,16 +18,14 @@
                 <h:outputText value="Responsable de atender la solicitud:" class="title_Page" />
                 <h:outputText value="#{controlsolicitudesController.usuario}" class="title_Page" />
                 <br/>
-                <p:commandButton  value="Pendientes"  action="#{controlsolicitudesController.actualizarItems(4)}" update="@form"/>                  
-                <p:commandButton  value="Asignadas"  update="@form"/> 
-                <p:commandButton  value="Terminadas" update="@form"/> 
-                <p:commandButton  value="Canceladas" update="@form"/> 
+                <p:commandButton  value="Asignados"  action="#{controlsolicitudesController.actualizarItems(4)}" update="@form"/>                  
+                <p:commandButton  value="Terminadas" action="#{controlsolicitudesController.actualizarItems(2)}" update="@form"/> 
+                <p:commandButton  value="Canceladas" action="#{controlsolicitudesController.actualizarItems(3)}" update="@form"/> 
                 <br/>
                 <br/>
                 <p:panel header="#{bundle.ListControlsolicitudesTitle}">
                        <p:contextMenu for="datalist">
                             <p:menuitem icon="ui-icon-search" value="#{bundle.View}" update=":CtlSolicitudesInternetViewForm" oncomplete="PF('CtlSolicitudesInternetViewDialog').show()"/>
-                            <p:menuitem icon="ui-icon-pencil" value="#{bundle.AsgProyecto}" />
                             <p:menuitem icon="ui-icon-plus" value="#{bundle.iniciarNota}"/> 
                         </p:contextMenu>
                     <p:dataTable id="datalist" value="#{controlsolicitudesController.items}" var="item"
@@ -70,11 +68,16 @@
                             </f:facet>
                             </p:cellEditor>
                         </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListControlsolicitudesTitle_observaciones}"/>
+                        <p:column headerText="Observaciones">
+                            <p:cellEditor>
+                            <f:facet name="output">
+                                <h:outputText value="#{item.observaciones}"/>
                             </f:facet>
-                            <h:outputText value="#{item.observaciones}"/>
+                                <f:facet name="input">
+                                    <h:inputTextarea value="#{item.observaciones}"/>
+                                </f:facet>
+                            
+                            </p:cellEditor>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
@@ -114,15 +117,24 @@
                             </p:cellEditor>
                         </p:column>
                         <p:column>
-                            <p:commandLink value="Cancelar"/>
+                            <p:commandLink value="Cancelar" action="#{controlsolicitudesController.cancelAndEditSolicitud()}" actionListener="#{controlsolicitudesController.setEvento(2)}">
+                                <p:confirm header="Confirmation" message="Esta segura(o) de cancelar la solicitud? #{controlsolicitudesController.selected.solicitud}" icon="ui-icon-alert"/>
+                            </p:commandLink>
                             <br/>
-                            <p:commandLink value="Terminar"/>
+                            <p:commandLink value="Terminar"  action="#{controlsolicitudesController.cancelAndEditSolicitud()}" actionListener="#{controlsolicitudesController.setEvento(1)}">
+                                <p:confirm header="" message="Esta segura(o) de terminar la solicitud? #{controlsolicitudesController.selected.solicitud}" icon="ui-icon-alert"/>
+                            </p:commandLink>
                         </p:column>
        <p:column style="width:32px">
            <p:rowEditor />
        </p:column>                        
                     </p:dataTable>
+                    
                 </p:panel>
+    <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+        <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+        <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+    </p:confirmDialog>
             </h:form>
             <ui:include src="Edit.xhtml"/>
             <ui:include src="View.xhtml"/>
